<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/workbench_bottom_nav_item"
        android:icon="@drawable/workbench_icon"
        android:title="Home" />


    <item
        android:id="@+id/create_circle_nav_bar"
        android:title="" />
    
    <item
        android:id="@+id/explore_bottom_nav_item"
        android:icon="@drawable/ic_outline_explore_24"
        android:title="Explore" />

</menu>