<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingLeft="14dp"
    android:paddingRight="14dp"
    android:orientation="vertical"
    tools:context=".ui.Login.UserRegistration.NewUserProfileCreation">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbarSize="0.1dp"
        android:scrollbarStyle="insideInset">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_black"
                android:layout_gravity="center"
                android:text="Circle"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:textColor="#2196F3"
                android:textSize="50dp"
                />

            <TextView
                android:id="@+id/beneathTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto_black"
                android:text="Choose your Profile picture"
                android:textColor="#2196F3"
                android:textSize="14dp" />

            <RelativeLayout
                android:id="@+id/imagePreview"
                android:layout_width="90dp"
                android:layout_height="110dp"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:clickable="true">


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="90dp"
                    android:layout_height="110dp"
                    android:layout_marginTop="13dp"
                    android:background="@drawable/ic_account_circle_black_24dp"
                    app:civ_border_color="#FF000000"
                    app:civ_border_width="2dp" />

                <Button
                    android:id="@+id/profilePicSetterImage"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:layout_alignBottom="@+id/profile_image"
                    android:layout_alignRight="@+id/profile_image"
                    android:layout_marginRight="2dp"
                    android:background="@drawable/edit_project_button_background"
                    android:foreground="@drawable/ic_camera_alt_white_24dp"
                    style="?android:attr/borderlessButtonStyle"
                    android:foregroundGravity="center" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="95dp">
                    <RelativeLayout
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="4dp"
                        android:orientation="vertical">

                        <ImageButton
                        android:id="@+id/avatar1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/avatar1"/>
                        <ImageView
                            android:id="@+id/avatar1_State"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginLeft="50dp"
                            android:layout_marginTop="50dp"
                            android:visibility="gone"
                            android:foreground="@drawable/tick_background"/>
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="4dp"
                        android:orientation="vertical">
                        <ImageButton
                        android:id="@+id/avatar2"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                            android:background="@drawable/avatar2">
                        </ImageButton>
                        <ImageView
                            android:id="@+id/avatar2_State"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginLeft="50dp"
                            android:layout_marginTop="50dp"
                            android:visibility="gone"
                            android:foreground="@drawable/tick_background"/>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="4dp"
                        android:orientation="vertical">
                    <ImageButton
                        android:id="@+id/avatar3"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:background="@drawable/avatar3" />
                        <ImageView
                            android:id="@+id/avatar3_State"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginLeft="50dp"
                            android:layout_marginTop="50dp"
                            android:visibility="gone"
                            android:foreground="@drawable/tick_background"/>
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="4dp"
                        android:orientation="vertical">
                    <ImageButton
                        android:id="@+id/avatar4"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:background="@drawable/avatar4" />
                        <ImageView
                            android:id="@+id/avatar4_State"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginLeft="50dp"
                            android:layout_marginTop="50dp"
                            android:visibility="gone"
                            android:foreground="@drawable/tick_background"/>
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="95dp">

                    <RelativeLayout
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="4dp"
                        android:orientation="vertical">
                    <ImageButton
                        android:id="@+id/avatar5"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:background="@drawable/avatar5" />
                        <ImageView
                            android:id="@+id/avatar5_State"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginLeft="50dp"
                            android:layout_marginTop="50dp"
                            android:visibility="gone"
                            android:foreground="@drawable/tick_background"/>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="4dp"
                        android:orientation="vertical">
                    <ImageButton
                        android:id="@+id/avatar6"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:background="@drawable/avatar6" />
                        <ImageView
                            android:id="@+id/avatar6_State"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginLeft="50dp"
                            android:layout_marginTop="50dp"
                            android:visibility="gone"
                            android:foreground="@drawable/tick_background"/>
                    </RelativeLayout>


                    <RelativeLayout
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="4dp"
                        android:orientation="vertical">
                    <ImageButton
                        android:id="@+id/avatar7"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:background="@drawable/avatar7" />
                        <ImageView
                            android:id="@+id/avatar7_State"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginLeft="50dp"
                            android:layout_marginTop="50dp"
                            android:visibility="gone"
                            android:foreground="@drawable/tick_background"/>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="4dp"
                        android:orientation="vertical">
                        <ImageButton
                            android:id="@+id/avatar8"
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            android:background="@drawable/avatar8" />
                        <ImageView
                            android:id="@+id/avatar8_State"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginLeft="50dp"
                            android:layout_marginTop="50dp"
                            android:visibility="gone"
                            android:foreground="@drawable/tick_background"/>
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>

          <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#ACA9A9"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:padding="20dp"
                    android:textColorHint="#ACA9A9"
                    android:hint="Enter Username"
                    android:fontFamily="@font/roboto_medium"
                    android:textSize="13dp"
                    android:ems="10"
                    android:nextFocusDown="@id/registerButton"
                    android:inputType="textPersonName"
                    android:imeOptions="actionDone"
                    android:digits="@string/username"
                    android:textColor="@color/black"/>

              <Button
                  android:id="@+id/registerButton"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="50dp"
                  android:background="@drawable/gradient_button"
                  android:fontFamily="@font/roboto_black"
                  android:gravity="start|center"
                  android:paddingLeft="19dp"
                  android:paddingRight="19dp"
                  android:text="Finish Registration"
                  android:textAllCaps="false"
                  android:textColor="#FFFFFFFF"
                  android:layout_marginStart="15dp"
                  android:layout_marginEnd="15dp"
                  android:textAlignment="center"
                  android:textSize="18dp" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>



</LinearLayout>