...
                    android:layout_marginLeft="2dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="4dp"
                    android:background="#D3D0D0"></View>
                <EditText
                    android:id="@+id/phone_number_text"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="1dp"
                    android:background="@drawable/ic_clear_white_24dp"
                    android:ems="10"
                    android:layout_marginTop="1dp"
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">


                <Button
                    android:id="@+id/generate_btn"
                    android:layout_width="400dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:width="200dp"
                    android:background="@drawable/gradient_button"
                    android:fontFamily="@font/roboto_black"
                    android:text="Generate OTP"
                    android:textAllCaps="false"
                    android:textColor="@android:color/background_light"
                    android:textSize="16sp" />

                <ProgressBar
                    android:id="@+id/login_progress_bar"
...
