...
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="99"
        android:layout_marginBottom="20dp">

        <Button
            android:id="@+id/nextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_gravity="bottom"
            android:background="@drawable/gradient_button"
            android:fontFamily="@font/roboto_black"
            android:gravity="start|center"
            android:paddingLeft="19dp"
            android:paddingRight="19dp"
            android:text="Next"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#FFFFFFFF"
            android:textSize="19dp" />

    </LinearLayout>
...
